# edu-annual-plan-agent-new

./: .replit  Dockerfile  Final_Report_Part1to4.docx  design_guidelines.md  doc_utils.py  equirements.txt  guidelines_template.json  main.py  package-lock.json  package.json  pyproject.toml  replit.md  utils.py
attached_assets/: Pasted---1769580143882_1769580143882.txt  Pasted---1769660329268_1769660329269.txt  Pasted--1--1769646335672_1769646335672.txt  Pasted--1--1769655983578_1769655983578.txt  Pasted--1-2--1769644858775_1769644858776.txt  Pasted--1-PART-1--1769584302554_1769584302555.txt  Pasted--1000-Ctrl-C-Replit-Ctrl-V--1769393823128_1769393823129.txt  Pasted--300-500-UI--1769581725074_1769581725074.txt  Pasted--4-3-1-4-3--1768694348179_1768694348180.txt  Pasted--AI--1769407741533_1769407741534.txt  Pasted--Asset-Manager-Replit--1769581938848_1769581938849.txt  Pasted--CRITICAL-BUG-FIX-Fix-Part-2-UI-Display-Missing-Expecte_1769413718346.txt  Pasted--Comprehensive-Task-Finalize-Feedback-Plan-Table-Logic-_1769393329128.txt  Pasted--Comprehensive-Task-Upgrade-Satisfaction-Survey-UI-Word_1769400602859.txt  Pasted--Content-Generation-Task-Business-Purpose-Goals-Expansi_1769408997446.txt  Pasted--Ctrl-A-Ctrl-C-Replit--1769391235558_1769391235559.txt  Pasted--Ctrl-C-Replit-Ctrl-V--1769398292369_1769398292369.txt  Pasted--Ctrl-C-Replit-Ctrl-V-Markdown--1769401669986_1769401669987.txt  Pasted--Major-Structural-Update-Split-Monthly-Plans-into-Part-_1769474021233.txt  Pasted--Major-Task-Implement-Evaluation-Plan-Table-with-Enhanc_1769412377337.txt  (+19 more)
client/: index.html  (+1 more)
(+37 files in other folders)
