[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "docx>=0.2.4",
    "google-generativeai>=0.8.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pypdf>=6.6.1",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "streamlit>=1.53.1",
]
